--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -55,6 +55,9 @@ block content
             +demo-link('user-fill-profile9.html') 06/Reg_p2_10 (static)
             +demo-link('boost-account.html') 08/Boost my account/main page
             +demo-link('boost-account-payment.html') 08/Boost my account/pay 1
+            +demo-link('boost-account-success.html') 08/Boost my account/pay 2
+            +demo-link('boost-account-payment2.html') 08/Boost my account/pay 3
+            +demo-link('boost-account2.html') 08/Boost my account/pay 4
     +arrow-up
 
 block popups
