--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -9,7 +9,7 @@
         & > ^[0]__close
             display: table-cell
 
-            +below(768px)
+            +below(1024px)
                 display: none
 
     &__input
@@ -19,6 +19,7 @@
         background-color: transparent
         padding: 0 24px
         font-size: 16px
+        min-width: 0
 
         &::placeholder
             opacity 1
