--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -4,7 +4,7 @@
     height: 88px
     background-color: bgColor;
 
-    +below(768px)
+    +below(1024px)
         height: 62px
 
     &__dropdown
@@ -36,6 +36,21 @@
     &__item
         display: block
         min-width: 149px
+        +below(1320px)
+            min-width: 135px
+
+        &_logo
+            +below(1320px)
+                min-width: 88px
+                height: 88px
+
+                .logo__text
+                    display: none
+
+                .navbar__link
+                    display: flex
+                    align-items: center
+                    justify-content: center
 
         &_dropdown:hover, &.active, &_active, &_active:hover
             & ^[0]__link
@@ -54,7 +69,7 @@
         &_flexible
             flex: 1
 
-        +below(768px)
+        +below(1024px)
             min-width: initial
             flex: 1 0 60px
 
@@ -79,9 +94,12 @@
         &_transparentify
             opacity: .5
 
-        +below(768px)
-            align-items: center
+        +below(1320px)
             padding: 0 12px
+            min-width: 80px
+
+        +below(1024px)
+            align-items: center
 
         &_has_badge
             position: relative
@@ -91,7 +109,7 @@
             justify-content: initial
             align-items: center
 
-        +above(768px)
+        +above(1024px)
             &:hover
                 background-color: #fff
 
@@ -114,7 +132,7 @@
         opacity: 0
         transition(opacity)
 
-    &__col:not(:first-child)
+    &__col:not(:first-of-type)
         margin-left: 12px
 
     &__icon
@@ -209,7 +227,7 @@
 
         & ^[0]__link
 
-            +above(768px)
+            +above(1024px)
                 &:hover
                     background-color: mainColor
                     color: #fff
