--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -2,6 +2,10 @@
     display: block
     padding-bottom: 40px
 
+    .filter
+        +below(1300px)
+            margin-top: 45px
+
     +below(768px)
         .grid__col_three
             width: 100%
