--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -115,6 +115,7 @@
         display: none
         width: 100%
         height: 88px
+        z-index: 210
 
     &__navbar_mobile
         display: none
