--- a/markup/components/model-info-popup/model-info-popup.pug
+++ b/markup/components/model-info-popup/model-info-popup.pug
@@ -25,4 +25,4 @@ mixin model-info-popup()
             +tags-item('#') With Video
 
         +e.A.action(href='#') View profile
-        +close
+        +close._top_right
