--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -12,10 +12,11 @@ include ../components/profile-common-popup/profile-common-popup
 include ../components/profile-video-popup/profile-video-popup
 include ../components/profile-photo-popup/profile-photo-popup
 include ../components/auth-popup/auth-popup
+include ../components/model-list/model-list
 
 block header
     +header
 
 block content
     div(style="height: 2000px")
-
+        +model-list
