auth popup responsive

--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -60,3 +60,10 @@
     &_paddings
         padding-top: 60px
         padding-bottom: 60px
+
+        +below(768px)
+            padding: 0
+
+    .container
+        +below(768px)
+            padding: 0
