--- a/markup/components/auth-popup/auth-popup.styl
+++ b/markup/components/auth-popup/auth-popup.styl
@@ -3,8 +3,14 @@
     width: 100%
     height: 100%
 
+    +below(768px)
+        flex-direction: column
+
     .heading
         margin-bottom: 39px
+
+        +below(768px)
+            margin-bottom: 33px
 
     &__col
         position: relative
@@ -19,6 +25,11 @@
             height: 100%
             overflow: initial
 
+            +below(768px)
+                width: 100%
+                height: initial
+                flex: 1
+
             & ^[0]__col
                 display: none
 
@@ -26,6 +37,9 @@
                     display: block
 
             &.active
+                +below(768px)
+                    height: 62.2%
+
                 & ^[0]__col
                     display: block
 
@@ -58,6 +72,9 @@
     &__fields
         margin-bottom: 40px
 
+        +below(768px)
+            margin-bottom: 12px
+
     &__input
         display: flex
         align-items: center
@@ -87,3 +104,6 @@
         font-weight 400
         line-height: 1.25
         text-decoration: none
+
+        +below(768px)
+            margin-top: 29px
