--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -19,4 +19,8 @@ block header
 
 block content
     div(style="height: 2000px")
-        +model-list
+        +demo
+            +demo-link('#auth-popup')(data-popup-id='#auth-popup' data-action='show').js-toggle-popup 05/Registration_ (1,1, 1,2)
+
+block popups
+    +auth-popup
