--- a/markup/components/model-photos/model-photos.styl
+++ b/markup/components/model-photos/model-photos.styl
@@ -10,8 +10,26 @@
     &__column
         height: 197px
 
+        +below(1024px)
+            height: 160px
+
+        +below(768px)
+            height: 125px
+
+        +below(540px)
+            height: 80px
+
         &_height-1
             height: 394px
+
+            +below(1024px)
+                height: 320px
+
+            +below(768px)
+                height: 250px
+
+            +below(540px)
+                height: 160px
 
     &__link
         position: relative
@@ -19,9 +37,17 @@
         width: 100%
         height: 100%
 
-        &:hover
+        &_video
             & ^[0]__description
-                opacity: 1
+                background-color: transparent
+
+                +above(1025px)
+                    opacity: 0
+
+            +above(1025px)
+                &:hover
+                    & ^[0]__description
+                        opacity 1
 
     &__img
         display: block
@@ -41,7 +67,6 @@
         height: 100%
         background-color: rgba(darkGreyColor, .85)
         z-index: 1
-        opacity: 0
         transition(opacity)
 
         b
