--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -14,13 +14,14 @@ include ../components/profile-photo-popup/profile-photo-popup
 include ../components/auth-popup/auth-popup
 include ../components/model-list/model-list
 include ../components/model-photos/model-photos
+include ../components/profile-card/profile-card
 
 block header
     +header
 
 block content
-    div(style="height: 2000px; margin-top: 100px")
-        +model-photos
+    div(style="height: 2000px; margin-top: 100px; background-color: #fff")
+        +profile-card
         //+demo
         //    +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 05/Registration_ (1,1, 1,2)
 
