fix responsive paddings

--- a/markup/components/agency-info/agency-info.styl
+++ b/markup/components/agency-info/agency-info.styl
@@ -12,6 +12,8 @@
 
             &__col
                 width: 100%
+                padding-left: 0
+                padding-right: 0
 
                 &:not(:first-child)
                     padding-top: 0
