--- a/markup/components/contacts-card/contacts-card.pug
+++ b/markup/components/contacts-card/contacts-card.pug
@@ -27,7 +27,7 @@ mixin contacts-card()
                                 +short-info-content
                                     +short-info-text WhatsApp, Viber
                         +col(6)
-                            +short-info
+                            +short-info.hide-mob
                                 +short-info-heading on web
                                 +short-info-content
                                     .contacts-card__icons
@@ -37,5 +37,9 @@ mixin contacts-card()
                                             != pugHelpers.Icon.call(locals, { iconName: 's-tw', className: 'contacts-card__icon contacts-card__icon_tw', iconWidth: '17', iconHeight: '14' })
                                         a(href='#').contacts-card__link
                                             != pugHelpers.Icon.call(locals, { iconName: 's-link', className: 'contacts-card__icon contacts-card__icon_link', iconWidth: '16', iconHeight: '16' })
+                            +short-info.show-mob
+                                +short-info-heading website
+                                +short-info-content
+                                    +short-info-text.A(href='#') Visit Website
 
             +button(href='#')._uppercase._bg_white._border_standart Private message
