--- a/markup/components/contacts-card/contacts-card.styl
+++ b/markup/components/contacts-card/contacts-card.styl
@@ -1,23 +1,48 @@
 .contacts-card
     display: flex
 
+    +below(768px)
+        flex-direction: column
+
+        .grid__col
+            width: 100%
+            padding-top: 18px
 
     .contacts-card__block_info .grid
         margin-top: 0
 
+    &__row
+        display: block
+
+        +below(768px)
+            &:first-child
+                padding-bottom: 18px
+                border-bottom: 1px solid borderColor
     &__col
         width: 50%
+
+        +below(768px)
+            width: 100%
 
     &__block
         width: 100%
         height: 275px
 
+        +below(768px)
+            height: auto
+
         &_map
             background-color: darkGreyColor
+
+            +below(768px)
+                height: 258px
 
         &_info
             background-color: #fff
             padding: 40px
+
+            +below(768px)
+                padding: 28px 30px 30px
 
     .button
         border-left: 0
