--- a/markup/components/short-info/short-info.styl
+++ b/markup/components/short-info/short-info.styl
@@ -17,6 +17,7 @@
         line-height 1.375
         font-size: 16px
         color: darkGreyColor
+        text-decoration: none
 
         span
             color: #878889
