--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -14,16 +14,21 @@ include ../components/profile-photo-popup/profile-photo-popup
 include ../components/auth-popup/auth-popup
 include ../components/model-list/model-list
 include ../components/model-photos/model-photos
-include ../components/model-info/model-info
+include ../components/profile-contacts/profile-contacts
+include ../components/map/map
 
 block header
     +header
 
 block content
     div(style="height: 2000px; margin-top: 100px; background-color: #fff")
-        +model-info
+        +profile-contacts
         //+demo
         //    +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 05/Registration_ (1,1, 1,2)
+
+block scripts
+    +map-scripts
+    script(src='%=static=%js/separate-js/maps/profile-contacts.js')
 
 block popups
     +profile-video-popup
