--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -35,6 +35,10 @@
         &_left_padding
             padding-right: 0
 
+        &_agencies
+            margin-left: 31px
+            margin-right: 31px
+
     &-button
         position: fixed
         display: block
