--- a/markup/components/share/share.pug
+++ b/markup/components/share/share.pug
@@ -32,5 +32,6 @@ mixin share()
             +share-button('ok')
             +share-button('email')
             +share-button('g+')
+            +share-button('dots').hide-desktop
 
-        +icon-button('dots', 19, 3, 'share__icon_dots').A.__button._dots
+        +icon-button('dots', 19, 3, 'share__icon_dots').A.__button.hide-mob._dots
