--- a/markup/components/share/share.styl
+++ b/markup/components/share/share.styl
@@ -3,6 +3,11 @@
     align-items: center
     justify-content: space-between
 
+    +below(768px)
+        flex-direction: column
+        align-items: flex-start
+        justify-content: flex-start
+
     &__label
         color darkGreyColor
         font-family fontMain
@@ -12,7 +17,14 @@
     &__buttons
         margin: 0 auto
         display: flex
+        flex-wrap wrap
         padding-left: 1px
+        padding-top: 1px
+
+        +below(768px)
+            margin-left: 0
+            margin-right: 0
+            margin-top: 40px
 
     &__button
         display: flex
@@ -21,6 +33,7 @@
         width: 60px
         height: 60px
         margin-left: -1px
+        margin-top: -1px
 
         &_dots
             margin-left: initial
