--- a/markup/components/send-form/send-form.pug
+++ b/markup/components/send-form/send-form.pug
@@ -1,6 +1,7 @@
+include ../textarea/textarea
+
 mixin send-form(placeholder, buttonValue)
     +b.FORM(action="#" method="POST").send-form&attributes(attributes)
-        +e.controls
-            +e.control(placeholder=placeholder contenteditable name='message')
-                block
-            +e.BUTTON.button=buttonValue
+        +textarea('message', placeholder)
+            block
+        +e.BUTTON.button=buttonValue
