--- a/markup/components/textarea/textarea.styl
+++ b/markup/components/textarea/textarea.styl
@@ -1,15 +1,20 @@
 .textarea
     display: block
     background-color: #fff
-    padding: 27px 29px
+    padding: 44px 29px 27px
     box-shadow 0 20px 50px rgba(29, 29, 29, .02)
 
     &__control
-        border-bottom: 1px solid borderColor
-        padding-bottom: 20px
+        white-space pre-line
         width: 100%
         color darkGreyColor
         font-family fontMain
         font-size 16px
         font-weight 400
         line-height 1.375
+        padding-bottom: 20px
+        border-bottom: 1px solid borderColor
+
+        &[placeholder]:empty::before
+            content: attr(placeholder)
+            pointer-events none
