--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -18,13 +18,21 @@ include ../components/agency-card/agency-card
 include ../components/map/map
 include ../components/share/share
 include ../components/recommended-slider/recommended-slider
+include ../components/reviews/reviews
+include ../components/send-form/send-form
+include ../components/textarea/textarea
 
 block header
     +header
 
 block content
-    div(style="height: 2000px; margin-top: 100px; background-color: #fff")
-        +recommended-slider
+    div(style="height: 2000px; margin-top: 100px; background-color: transparent")
+        +container
+            +send-form('message', 'send message')
+        //- +reviews
+        //- +reviews-rate
+        //- +reviews-rate-no-login
+        //- +reviews-feedbacks
         //+demo
         //    +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 05/Registration_ (1,1, 1,2)
 
