--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -27,12 +27,8 @@ block header
 
 block content
     div(style="height: 2000px; margin-top: 100px; background-color: transparent")
-        +container
-            +send-form('message', 'send message')
-        //- +reviews
-        //- +reviews-rate
-        //- +reviews-rate-no-login
-        //- +reviews-feedbacks
+        //+container
+
         //+demo
         //    +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup 05/Registration_ (1,1, 1,2)
 
